# web-chat-FastApi

./: README.md  docker-compose.yml
src/: Dockerfile  main.py  pyproject.toml  setup.cfg
src/api/: api_user.py  auth.py  chat.py  router.py  static.py  user.py  websocket.py
src/core/: auth.py  config.py  exceptions.py
src/db/migrations/versions/: 2024_10_08_1212-30e6f5b85aa7_added_user_table.py  2024_11_21_0933-6ba64933ce6d_added_message_table.py  2024_12_02_1000-dc75e0b41d09_added_the_updated_at_and_created_at_.py
src/db/models/: __init__.py  message.py  user.py
src/db/repository/: base.py  message.py  user.py
src/schemas/: message.py  token.py  users.py
src/services/: auth.py  connection_websocket.py  message.py  password.py  user.py
src/static/js/: auth.js  web-chat.js
src/static/styles/: auth.css  web-chat.css
src/templates/: auth.html  web-chat.html
