[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.5"}
pydantic = {extras = ["dotenv"], version = "^2.1.1"}
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.15"}
asyncpg = "^0.30.0"
inflection = "^0.5.1"
loguru = "^0.7.0"
passlib = "^1.7.4"
uvicorn = "^0.32.0"
bcrypt = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.black]
line-length = 120